# BadReflection

./: CMakeLists.txt  README.md
include/: Enum.h  Factory.cpp  Factory.h  Field.hpp  Function.hpp  Person.cpp  Person.h  Primitive.h  Property.cpp  Property.h  Type.hpp  Variables.hpp  VariablesbyDrake.hpp
source/: main.cpp
